@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.sarpur"
        name="Sarpur"
-       version="4.1.0"
+       version="4.2.0"
        provider-name="Dagur Páll Ammendrup">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
